crates/temper-services/tests/compile_fail/forge_authenticated_profile.stderr
error[E0451]: fields `profile` and `claims` of struct `AuthenticatedProfile` are private
  --> tests/compile_fail/forge_authenticated_profile.rs:15:28
   |
15 |     AuthenticatedProfile { profile, claims }
   |                            ^^^^^^^  ^^^^^^ private field
   |                            |
   |                            private field
